# MTGraph

./: .gitignore  Makefile  README.md  WCC_2GPU_RESULTS.md  pyproject.toml
result/: BENCHMARK_RESULTS.md  BFS_SINGLE_RESULTS.md  README_ARCHIVE.md  benchmark_6gpu.json  benchmark_results.json
scripts/: benchmark_6gpu.py  benchmark_6gpu_fix.py  bfs_benchmark.py  bfs_single_benchmark.py  cit_patents_functional_test.sh  cmd.sh  env.sh  pr_benchmark.py  pr_benchmark.sh  wcc_2gpu_benchmark.py  wcc_sssp_benchmark.py
src/algorithms/: BFS.py  ConnectedComponents.py  HITS.py  PageRank.py  ShortestPaths.py
src/apps/: bfs.py  hits.py  pagerank.py  sssp.py  wcc.py
src/common/python/: arange.py  comm_plan.py  distributed.py  io.py  partition.py
src/framework/: GASProgram.py  helper.py
src/framework/partition/: EdgePartition.py  GeminiPartition.py  Partition.py  VertexPartition.py
src/framework/strategy/: DistributedStrategy.py  MultiGPUOncePartition.py  MultiGPUStrategyByNCCL.py  PartitionStrategy.py  SimpleStrategy.py  Strategy.py
src/multigpu/framework/: BFS.py  PageRank.py  README.md  SSSP.py  WCC.py  distributed_entry.py
src/multigpu/scripts/: README.md  bfs.py  cmd.sh  pr.py  run.py  sssp.py  test.py  wcc.py
src/type/: CSCGraph.py  CSRCGraph.py  CSRGraph.py  Graph.py  Subgraph.py
tests/: allreduce_benchmark.py  conftest.py  test_algorithms.py  test_common.py  test_multigpu_scripts.py
tests/fixtures/: gen_small_graph.py
tools/: el2csr.cpp
